--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,7 @@
     max-height: 120px;
     max-width: 120px;
     width: 100%;
+    border-radius: 50%;
 }
 @media screen and (max-width: 760px) {
     .profile__avatar {
