--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -11,3 +11,8 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     }
+    * {
+        outline-width: 1px;
+        outline-style: solid;
+        outline-color: green;
+    }
