--- a/blocks/elements/__button/elements__button.css
+++ b/blocks/elements/__button/elements__button.css
@@ -1,4 +1,4 @@
-.element__button {
+.elements__button {
     background-image: url(../../../images/like_icon.svg);
     margin-left: 21px;
     border: none;
