--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,4 +1,4 @@
-.element__list {
+.elements__list {
     display: grid;
     margin: 0;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
