--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,3 +1,10 @@
+@import url(./__button/elements__button.css);
+@import url(./__image/elements__image.css);
+@import url(./__info/elements__info.css);
+@import url(./__item/elements__item.css);
+@import url(./__list/elements__list.css);
+@import url(./__title/elements__title.css);
+
 .elements {
     margin-top: 50px;
 }
