--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,19 +4,13 @@
     top: 50%;
     transform: translate(-50%, -50%);
     max-width: 430px;
-    width: 100%;
-    min-height: 330px;	
+    width: 100%;	
     background: #fff;
     border-radius: 10px; 
 }
 
 @media screen and (max-width: 550px) {
     .popup__container {
-        max-width: 350px;
-    }
-}
-@media screen and (max-width: 475px) {
-    .popup__container  {
-    
+        max-width: calc(100% - 48px*2);
     }
 }
