--- a/blocks/popup/__input-container/popup__input-container.css
+++ b/blocks/popup/__input-container/popup__input-container.css
@@ -2,6 +2,17 @@
     border: 0;
     padding: 0;
     max-width: 430px;
-    margin: 0 36px 0;
+    margin: 0px 36px 36px;
+}
+
+@media screen and (max-width: 475px) {
+    .popup__input-container {
+        margin: 0 24px 24px;
+    }
+}
+@media screen and (max-width: 350px) {
+    .popup__input-container {
+        margin: 0 12px 12px;
+    }
 }
 
