--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,3 +4,15 @@
     font-size: 24px;
     line-height: 1.2;
 }
+
+@media screen and (max-width: 475px) {
+    .popup__title {
+        margin: 24px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .popup__title {
+        margin: 12px;
+    }
+}
