--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 475px) {
     .header__logo {
-        margin-left: 27px;
-        width: 104px;
+        margin-left: 30px;
+        max-width: 104px;
     }
 }
