--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -3,16 +3,20 @@
     font-size: 18px;
     line-height: 1.2;
     margin: 0;
-    margin-top: 16px;
+    max-width: 295px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 @media screen and (max-width: 760px) {
     .profile__about {
+        grid-column: 1/3;
         margin: auto;
-        margin-top: 14px;
     }
 }
 @media screen and (max-width: 475px) {
     .profile__about  {
+        max-width: 200px;
         font-size: 14px;
     }
 }
