--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,11 +1,19 @@
 .profile__info {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    margin-left: 30px;
+    display: grid;
+    grid-template-columns: 1fr minmax(auto, 24px);
+    grid-gap: 16px 17px;
+    margin: 0 30px 0;
+    align-items: baseline;
 }
 @media screen and (max-width: 760px) {
     .profile__info {
         margin: auto;
+        grid-gap: 14px;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    .profile__info {
+        grid-gap: 0;
     }
 }
