--- a/blocks/elements/__button/elements__button.css
+++ b/blocks/elements/__button/elements__button.css
@@ -6,3 +6,6 @@
     min-height: 19px;
     align-self: center;
 }
+.elements__button_active {
+    background-image: url(../../../images/like_icon_filled.svg);
+}
