--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -4,4 +4,6 @@
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     grid-gap: 21px 18px;
     padding: 0;
+    position: relative;
+    width: 100%;
 }
