--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -2,4 +2,7 @@
     max-width: 100%;
     width: 100%;
     border-radius: 10px 10px 0 0;
+    cursor: pointer;
+    object-fit: fill;
+    height: 282px;
 }
