--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -6,3 +6,15 @@
     object-fit: fill;
     height: 282px;
 }
+
+@media screen and (max-width: 677px) {
+    .elements__image {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .elements__image {
+        height: 282px;
+    }
+}
