--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -14,3 +14,8 @@
         max-width: calc(100% - 48px*2);
     }
 }
+@media screen and (max-width: 375px) {
+    .popup__container {
+        max-width: 240px;
+    }
+}
