--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -10,9 +10,10 @@
         margin: 0 24px 24px;
     }
 }
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 375px) {
     .popup__input {
-        margin: 0 12px 12px;
+        max-width: 240px;
+        margin: 0px 20px 30px;
     }
 }
 
