--- a/blocks/popup/_image/popup__close_image.css
+++ b/blocks/popup/_image/popup__close_image.css
@@ -7,3 +7,10 @@
     left: 100%;
     bottom: 100%;
 }
+
+@media screen and (max-width: 475px) {
+    .popup__close_image {
+        min-width: 21px;
+        min-height: 21px;
+    }
+}
