fixed JS and CSS errors after first review

--- a/blocks/card-container/__list/card-container__list.css
+++ b/blocks/card-container/__list/card-container__list.css
@@ -1,4 +1,4 @@
-.elements__list {
+.card-container__list {
     display: grid;
     margin: 0;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
