--- a/blocks/popup/_image/popup__container_image.css
+++ b/blocks/popup/_image/popup__container_image.css
@@ -1,9 +1,10 @@
 .popup__container_image {
     margin: 0;
-    max-width: 75vw;
-    width: 100%;
-    max-height: 75vh;
     position: fixed;
+    max-width: 75vw;
+    width: auto;
+    max-height: 75vh;
+    height: auto;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
