--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -3,6 +3,7 @@
     min-width: 24px;
     min-height: 24px;
     border: 1px solid #fff;
+    align-self: center;
 }
 
 @media screen and (max-width: 475px) {
