--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,8 @@
 @import url(../blocks/container/container.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/elements/elements.css);
+@import url(../blocks/card-container/card-container.css);
+@import url(../blocks/card/card.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/popup/popup.css);
