валидация форм JS

--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -5,14 +5,16 @@
     min-height: 27px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    margin-bottom: 30px;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.2;
+    margin-bottom: 30px;
 }
 
-.popup__item:last-of-type {
-    margin-bottom: 0;
+.popup__item-error {
+    font-size: 12px;
+    line-height: 1.25;
+    color: #FF0000;
 }
 
 @media screen and (max-width: 375px) {
