--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.popup__input {
+.popup__form {
     border: 0;
     padding: 0;
     max-width: 430px;
@@ -6,12 +6,12 @@
 }
 
 @media screen and (max-width: 475px) {
-    .popup__input {
+    .popup__form {
         margin: 0 24px 24px;
     }
 }
 @media screen and (max-width: 375px) {
-    .popup__input {
+    .popup__form {
         max-width: 240px;
         margin: 0px 20px 30px;
     }
