--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,13 +1,17 @@
 @import url(./__button-submit/popup__button-submit.css);
 @import url(./__close/popup__close.css);
 @import url(./__container/popup__container.css);
-@import url(./__input/popup__input.css);
+@import url(./__form/popup__form.css);
 @import url(./__item/popup__item.css);
 @import url(./__title/popup__title.css);
 @import url(./__view/popup__view.css);
+@import url(./__field/popup__field.css);
 @import url(./_image/popup__close_image.css);
 @import url(./_image/popup__container_image.css);
 @import url(./_image/popup__title_image.css);
+@import url(./__button-submit/_disabled/popup__button-submit_disabled.css);
+@import url(./__item/_error/popup__item_error.css);
+@import url(./__item-error/popup__item-error.css);
 
 .popup {
     position: fixed;
