--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -22,7 +22,7 @@
     background: rgba(0,0,0,.5);
     align-items: center;
     justify-content: center;
-    transition: opacity 0.5s linear;
     opacity: 0;
-	visibility: hidden;
+    visibility: hidden;
+    transition: visibility 0.5s, opacity 0.5s linear;
 }
