--- a/blocks/card-container/__list/card-container__list.css
+++ b/blocks/card-container/__list/card-container__list.css
@@ -1,7 +1,8 @@
 .card-container__list {
     display: grid;
     margin: 0;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    grid-template-columns: repeat(auto-fit, 282px);
+    justify-content: center;
     grid-gap: 21px 18px;
     padding: 0;
     position: relative;
