--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,4 @@
 .profile__avatar {
-    max-width: 120px;
-    width: 100%;
-    border-radius: 50%;
-}
-@media screen and (max-width: 760px) {
-    .profile__avatar {
-        margin: auto;
-        margin-bottom: 14px;
-    }
+    display: flex;
+    position: relative;
 }
