added like count

--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,6 +6,7 @@
 @import url(./__name/profile__name.css);
 @import url(./__cover/profile__cover.css);
 @import url(./__avatar/profile__avatar.css);
+@import url(./__button-avatar/profile__button-avatar.css);
 
 .profile {
     width: 100%;
