--- a/src/blocks/profile/__cover/profile__cover.css
+++ b/src/blocks/profile/__cover/profile__cover.css
@@ -1,11 +1,16 @@
 .profile__cover {
-    background-image: url(../../../images/avatar_button.svg);
-    width: 26px;
-    height: 26px;
-    position: absolute;
-    border: none;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-}
+        width: 120px;
+        height: 120px;
+        background: rgba(0, 0, 0, 0.8);
+        opacity: 0;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+.profile__cover:hover {
+        opacity: 0.8;
+        transition: .5s linear;
+    }
 
