--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,8 +1,11 @@
 .profile__image {
     max-width: 120px;
+    height: 120px;
     width: 100%;
     border-radius: 50%;
+    object-fit: cover;
 }
+
 @media screen and (max-width: 760px) {
     .profile__image {
         margin: auto;
