--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,3 +12,4 @@
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/opacity/opacity.css);
 @import url(../blocks/popup/_image/popup__background_image.css);
+@import url(../blocks/button/_visible/button_visible.css);
