button outline fix

--- a/src/blocks/popup/__item/popup__item.css
+++ b/src/blocks/popup/__item/popup__item.css
@@ -9,6 +9,12 @@
     font-size: 14px;
     line-height: 1.2;
     margin-bottom: 30px;
+    outline: none;
+}
+
+.popup__item:-webkit-autofill {
+    box-shadow: inset 0 0 0px 9999px #fff;
+    -webkit-text-fill-color: #000;
 }
 
 .popup__item-error {
@@ -17,7 +23,7 @@
     color: #FF0000;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 475px) {
     .popup__item {
         margin-bottom: 20px;
         font-size: 12px;
