--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -4,13 +4,13 @@
     left: 100%;
     bottom: 100%;
     border: 0;
-    min-width: 41px;
-    min-height: 41px;
+    width: 30px;
+    height: 30px;
 }
 
 @media screen and (max-width: 475px) {
     .popup__close {
-        min-width: 21px;
-        min-height: 21px;
+        left: 45%;
+        margin-bottom: 20px;
     }
 }
