--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,4 +1,6 @@
 .popup__container {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     left: 50%;
     top: 50%;
@@ -16,6 +18,6 @@
 }
 @media screen and (max-width: 375px) {
     .popup__container {
-        max-width: 240px;
+        max-width: 280px;
     }
 }
